# Quant-Project

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
benchmarks/: bench_order_book.cpp  bench_ring_buffer.cpp  bench_simd.cpp
bindings/: python_bindings.cpp
config/: backtest.yaml
include/lumina/: avellaneda_stoikov.hpp  fix_engine.hpp  kdb_mock.hpp  market_data_handler.hpp  memory_pool.hpp  order_book.hpp  order_book_imbalance.hpp  ring_buffer.hpp  risk_checks.hpp  simd_indicators.hpp  strategy_engine.hpp  thread_utils.hpp  types.hpp
python/: requirements.txt  run_backtest.py
python/lumina_hft/: __init__.py  avellaneda_stoikov.py
python/lumina_hft/backtester/: __init__.py  engine.py  latency.py  queue_sim.py  slippage.py
src/: avellaneda_stoikov.cpp  fix_engine.cpp  kdb_mock.cpp  main.cpp  market_data_handler.cpp  memory_pool.cpp  order_book.cpp  order_book_imbalance.cpp  ring_buffer.cpp  risk_checks.cpp  simd_indicators.cpp  strategy_engine.cpp  thread_utils.cpp
tests/: test_avellaneda_stoikov.cpp  test_fix_engine.cpp  test_memory_pool.cpp  test_order_book.cpp  test_ring_buffer.cpp  test_risk_checks.cpp
